--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "debug": "cross-env NODE_OPTIONS='--inspect' next dev",
     "lint": "next lint",
-    "deploy": "vercel --prod"
+    "deploy": "vercel --prod",
+    "export": "next export"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.4.4",
     "@react-three/drei": "^9.105.4",
     "@react-three/fiber": "^8.16.2",
     "@sentry/nextjs": "^7.105.0",
@@ -17,15 +20,22 @@
     "@types/three": "^0.163.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cookie": "^0.6.0",
+    "cross-env": "^7.0.3",
+    "file-saver": "^2.0.5",
     "framer-motion": "^11.0.25",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.365.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.1.4",
     "next-themes": "^0.3.0",
+    "qrcode.react": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-lottie": "^1.2.4",
+    "react-qr-code": "^2.0.13",
+    "react-qrcode-logo": "^2.10.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.163.0",
@@ -33,6 +43,7 @@
     "vercel": "^34.0.0"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
